Reduce line height to make sure everything is aligned.

--- a/parlassets/scss/_labeled_chart_list.scss
+++ b/parlassets/scss/_labeled_chart_list.scss
@@ -4,7 +4,7 @@
   list-style: none;
   .labeled-chart {
     @extend %flex;
-    line-height: 1.2em;
+    line-height: 1.1em;
     .column {
       font-family: Roboto, sans-serif;
       font-size: 18px;
